--- a/src/app/components/executed/executed.component.html
+++ b/src/app/components/executed/executed.component.html
@@ -1,3 +1,3 @@
-<div style="max-height: 50vh">
-  <canvas id="executedOrdersChart"></canvas>
+<div style="width: 90vw; height: 50vh">
+  <canvas width="auto" id="executedOrdersChart"></canvas>
 </div>
