--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,7 +19,7 @@
       WMATIC-WETH, USDC-DAI, WETH-AAVE, LINK-WETH, FRAX-USDC, WMATIC-USDC, WMATIC-FISH, WMATIC-TITAN, CRV-WETH, SNX-USDC,
       FRAX-FXS, SUSHI-WETH, GRT-WETH, WBTC-ibBTC, USDC-PUSD, dTOP-WETH, SNX-WETH, DHT-WETH, USDC-PYQ, WETH-SX, OMEN-WETH,
       OMEN-WMATIC, WETH-wFIL, USDC-BIFI, WMATIC-WOOFY, SUSHI-WMATIC, WMATIC-PGOV, renDOGE-WETH, WMATIC-BONE, USDC-BONE,
-      USDC-SUSHI </span>
+      USDC-SUSHI every 2 minutes</span>
   </div>
 
   <hr>
