--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,11 +15,14 @@
 
   <div>
     <!-- <span>Relayer running on: USDC-IRON, WMATIC-TITAN, WETH-USDC, WBTC-WETH, WMATIC-WETH, WETH-USDT, USDC-USDT, WETH-DAI, LINK-WETH, WETH-AAVE, USDC-DAI, WMATIC-USDC, FRAX-USDC, WMATIC-FISH, CRV-WETH, SNX-USDC, FRAX-FXS, WETH-DHT, SUSHI-WETH, GRT-WETH </span> -->
-    <span>Relayer running on: WETH-WMATIC, WETH-USDC, WMATIC-USDC, WETH-DAI, WBTC-WETH, USDC-USDT, USDC-IRON, WETH-USDT,
-      WMATIC-WETH, USDC-DAI, WETH-AAVE, LINK-WETH, FRAX-USDC, WMATIC-USDC, WMATIC-FISH, WMATIC-TITAN, CRV-WETH, SNX-USDC,
-      FRAX-FXS, SUSHI-WETH, GRT-WETH, WBTC-ibBTC, USDC-PUSD, dTOP-WETH, SNX-WETH, DHT-WETH, USDC-PYQ, WETH-SX, OMEN-WETH,
-      OMEN-WMATIC, WETH-wFIL, USDC-BIFI, WMATIC-WOOFY, SUSHI-WMATIC, WMATIC-PGOV, renDOGE-WETH, WMATIC-BONE, USDC-BONE,
-      USDC-SUSHI every 2 minutes</span>
+    <span>Relayer running on: WETH-WMATIC, WETH-USDC, WETH-DAI, WBTC-WETH, USDC-USDT, USDC-IRON, WETH-USDT, USDC-DAI,
+      WETH-AAVE, LINK-WETH, FRAX-USDC, WMATIC-USDC, WMATIC-FISH, WMATIC-TITAN, CRV-WETH, SNX-USDC, FRAX-FXS, SUSHI-WETH,
+      GRT-WETH, WBTC-ibBTC, USDC-PUSD, dTOP-WETH, SNX-WETH, DHT-WETH, WETH-SX, OMEN-WETH, OMEN-WMATIC, WETH-wFIL, USDC-BIFI,
+      WMATIC-WOOFY, SUSHI-WMATIC, WMATIC-PGOV, renDOGE-WETH, WMATIC-BONE, USDC-BONE, USDC-SUSHI, LINK-WMATIC, WMATIC-DAI,
+      USDT-DAI, WMATIC-SPADE, WMATIC-DPI, WMATIC-PIXEL, WMATIC-GMS, USDC-miMatic, WMATIC-USDT, WMATIC-AAVE, WMATIC-POLAR,
+      USDC-POLAR, USDC-JPYC, USDC-CHUM, WETH-JPYC, WMATIC-JPYC, WMATIC-WBTC, USDC-WBTC, renBTC-WBTC, USDC-DINO, WMATIC-DINO,
+      WMATIC-GAJ, WMATIC-DMAGIC, USDC-GAJ, WETH-PolyDoge, WMATIC-PolyDoge, USDC-PolyDoge, SUSHI-LINK, SUSHI-USDT, SUSHI-DAI,
+      SUSHI-WBTC, WMATIC-CRV, JPYC-USDT, USDC-TITAN, WMATIC-PUSD every 2 minutes</span>
   </div>
 
   <hr>
